--- a/vmb/src/mmixide/mmixvd.vcproj
+++ b/vmb/src/mmixide/mmixvd.vcproj
@@ -246,6 +246,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\runoptions.c"
+				>
+			</File>
+			<File
 				RelativePath=".\sources.c"
 				>
 			</File>
@@ -313,6 +317,10 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\winopt\resource.h"
 				>
 			</File>
 			<File
@@ -390,7 +398,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Icons\loadfile.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\mmixide.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\mmixide16.ico"
 				>
 			</File>
 			<File
@@ -399,6 +415,10 @@
 			</File>
 			<File
 				RelativePath=".\Icons\mmixvd16.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Icons\mmixvd256.ico"
 				>
 			</File>
 			<File
