--- a/vmb/src/winopt/win32about.rc
+++ b/vmb/src/winopt/win32about.rc
@@ -26,16 +26,18 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 // Dialog
 //
 
-IDD_ABOUT DIALOGEX 0, 0, 166, 97
+IDD_ABOUT DIALOGEX 0, 0, 166, 143
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,108,78,50,14
-    CTEXT           "VMB",IDC_TITLE,6,6,147,12,SS_CENTERIMAGE
-    CTEXT           "Revision:",IDC_REVISION,6,24,147,12,SS_CENTERIMAGE
-    CTEXT           "Version:",IDC_VERSION,6,42,147,12,SS_CENTERIMAGE
-    CTEXT           "Copyright: Martin Ruckert, 2012",IDC_STATIC,6,60,147,12,SS_CENTERIMAGE
+    DEFPUSHBUTTON   "OK",IDOK,108,120,50,14
+    CTEXT           "VMB",IDC_TITLE,11,5,147,12,SS_CENTERIMAGE
+    CTEXT           "Revision:",IDC_REVISION,11,24,147,12,SS_CENTERIMAGE
+    CTEXT           "Version:",IDC_VERSION,11,43,147,12,SS_CENTERIMAGE
+    CTEXT           "Copyright: Martin Ruckert, 2012",IDC_STATIC,11,62,147,12,SS_CENTERIMAGE
+    CTEXT           "Using the Scintilla Editor Component",IDC_STATIC,11,81,147,12
+    CTEXT           "See: www.scintilla.org",IDC_STATIC,11,93,147,12
 END
 
 
@@ -52,12 +54,12 @@ END
 
 3 TEXTINCLUDE 
 BEGIN
-    "\r\n"
+    "\r\0"
 END
 
 2 TEXTINCLUDE 
 BEGIN
-    "#include ""afxres.h""\r\n"
+    "#include ""afxres.h""\r\0"
 END
 
 #endif    // APSTUDIO_INVOKED
@@ -73,8 +75,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_ABOUT, DIALOG
     BEGIN
-        RIGHTMARGIN, 109
-        BOTTOMMARGIN, 6
+        RIGHTMARGIN, 158
+        BOTTOMMARGIN, 134
     END
 END
 #endif    // APSTUDIO_INVOKED
