adding font support improving the data edit frame, still errors when scrolling memory or registers with highlighting
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@478 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixvd.vcproj
+++ b/vmb/src/mmixide/mmixvd.vcproj
@@ -93,6 +93,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="copy helpfile to output directory"
+				CommandLine="copy mmixvd.chm $(OutDir)\mmixvd.chm"
 			/>
 		</Configuration>
 		<Configuration
@@ -181,6 +183,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				Description="copy helpfile to output directory"
+				CommandLine="copy mmixvd.chm $(OutDir)\mmixvd.chm"
 			/>
 		</Configuration>
 	</Configurations>
@@ -319,11 +323,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath=".\winopt\resource.h"
 				>
 			</File>
 			<File
-				RelativePath=".\winopt\resource.h"
+				RelativePath=".\resource.h"
 				>
 			</File>
 			<File
