--- a/vmb/src/winopt/winopt.vcproj
+++ b/vmb/src/winopt/winopt.vcproj
@@ -164,6 +164,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\layout.c"
+				>
+			</File>
+			<File
 				RelativePath=".\option.c"
 				>
 			</File>
