--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -115,14 +115,18 @@ END
 // Dialog
 //
 
-IDD_BREAKPOINTS DIALOGEX 0, 0, 186, 90
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
+IDD_BREAKPOINTS DIALOGEX 0, 0, 134, 76
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_BORDER
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Add",IDC_ADD,129,7,50,14
-    PUSHBUTTON      "Remove",IDC_REMOVE,129,25,50,14
-    EDITTEXT        IDC_ADDRESS,7,7,112,14,ES_AUTOHSCROLL
-    LISTBOX         IDC_LIST_BREAKPOINTS,7,45,172,38,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_ADDRESS,2,3,76,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Add",IDC_ADD,82,2,50,16
+    PUSHBUTTON      "Remove",IDC_REMOVE,82,22,50,16
+    PUSHBUTTON      "X",IDC_EXEC,2,22,16,16,BS_ICON
+    PUSHBUTTON      "R",IDC_READ,22,22,16,16,BS_ICON
+    PUSHBUTTON      "W",IDC_WRITE,42,22,16,16,BS_ICON
+    PUSHBUTTON      "T",IDC_TRACE,62,22,16,16,BS_ICON
+    LISTBOX         IDC_LIST_BREAKPOINTS,2,42,130,32,LBS_SORT | LBS_OWNERDRAWFIXED | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_SHOW_DEBUG DIALOGEX 0, 0, 307, 193
@@ -172,6 +176,7 @@ BEGIN
     PUSHBUTTON      "Replace",IDC_REPLACE,260,41,50,14
     PUSHBUTTON      "Replace All",IDC_REPLACE_ALL,260,58,50,14
     CONTROL         "Wrap around",IDC_CHECK_WRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,97,62,58,10
+    CONTROL         "Use \\t, \\n, \\r, and \\xFF",IDC_CHECK_ESC,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,97,49,94,10
 END
 
 IDD_OPTIONS_ASSEMBLER DIALOGEX 0, 0, 186, 90
@@ -183,7 +188,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,129,24,50,14
     LTEXT           "Buffer size",IDC_STATIC,7,9,50,8
     EDITTEXT        IDC_BUFFERSIZE,63,7,56,14,ES_AUTOHSCROLL
-    CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,64,7,11,14
+    CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,63,7,11,14
     CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,25,112,10
     CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,41,112,10
     CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,56,112,10
@@ -259,7 +264,7 @@ END
 
 IDD_OPTIONS_SOURCES DIALOGEX 0, 0, 332, 138
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Build"
+CAPTION "Sources"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,275,7,50,15
@@ -299,10 +304,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_BREAKPOINTS, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 83
+        LEFTMARGIN, 2
+        TOPMARGIN, 2
     END
 
     IDD_SHOW_DEBUG, DIALOG
@@ -386,12 +389,12 @@ BEGIN
         MENUITEM "&Save\tCtrl+S",               ID_FILE_SAVE,MFT_STRING,MFS_ENABLED
         MENUITEM "Save &As",                    ID_FILE_SAVEAS,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
-        MENUITEM "Page Setup ...",              ID_FILE_PAGESETUP,MFT_STRING,MFS_ENABLED
+        MENUITEM "Pa&ge Setup ...",             ID_FILE_PAGESETUP,MFT_STRING,MFS_ENABLED
         MENUITEM "Print ...\tCtrl+P",           ID_FILE_PRINT,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "&Exit",                       ID_FILE_EXIT,MFT_STRING,MFS_ENABLED
     END
-    POPUP "Edit",                           65535,MFT_STRING,MFS_ENABLED
+    POPUP "&Edit",                          65535,MFT_STRING,MFS_ENABLED
     BEGIN
         MENUITEM "Undo\tCtrl+Z",                ID_EDIT_UNDO,MFT_STRING,MFS_ENABLED
         MENUITEM "Redo\tCtrl+Y",                ID_EDIT_REDO,MFT_STRING,MFS_ENABLED
@@ -424,13 +427,13 @@ BEGIN
             MENUITEM "Stack Segment",               ID_MEM_STACKSEGMENT,MFT_STRING,MFS_ENABLED
             MENUITEM "Negative Segment",            ID_MEM_NEGATIVESEGMENT,MFT_STRING,MFS_ENABLED
         END
-        MENUITEM "Symbol &table",               ID_VIEW_SYMBOLTABLE,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Symbol table",               ID_VIEW_SYMBOLTABLE,MFT_STRING,MFS_ENABLED
         MENUITEM "&Breakpoints",                ID_VIEW_BREAKPOINTS,MFT_STRING,MFS_ENABLED
-        MENUITEM "Trace",                       ID_VIEW_TRACE,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Trace",                      ID_VIEW_TRACE,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "Zoom &In\tCtrl++",            ID_VIEW_ZOOMIN,MFT_STRING,MFS_ENABLED
         MENUITEM "Zoom &Out\tCtrl+-",           ID_VIEW_ZOOMOUT,MFT_STRING,MFS_ENABLED
-        MENUITEM "&Syntax Highlighting",        ID_VIEW_SYNTAX,MFT_STRING,MFS_ENABLED
+        MENUITEM "Syntax &Highlighting",        ID_VIEW_SYNTAX,MFT_STRING,MFS_ENABLED
         MENUITEM "Show &White Space",           ID_VIEW_WHITESPACE,MFT_STRING,MFS_ENABLED
     END
     POPUP "&MMIX",                          65535,MFT_STRING,MFS_ENABLED
@@ -438,11 +441,11 @@ BEGIN
         MENUITEM "&Assemble\tF7",               ID_MMIX_ASSEMBLE,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "&Debug\tF5",                  ID_MMIX_DEBUG,MFT_STRING,MFS_ENABLED
-        MENUITEM "Step",                        ID_MMIX_STEP,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Step Instruction",           ID_MMIX_STEP,MFT_STRING,MFS_ENABLED
         MENUITEM "Step &Over",                  ID_MMIX_STEPOVER,MFT_STRING,MFS_ENABLED
         MENUITEM "Step O&ut",                   ID_MMIX_STEPOUT,MFT_STRING,MFS_ENABLED
-        MENUITEM "Break",                       ID_MMIX_STOP,MFT_STRING,MFS_ENABLED
-        MENUITEM "Quit",                        ID_MMIX_QUIT,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Break Execution",            ID_MMIX_STOP,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Halt Execution",             ID_MMIX_QUIT,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
         MENUITEM "&Run\tCtrl+F5",               ID_MMIX_RUN,MFT_STRING,MFS_ENABLED
         MENUITEM MFT_SEPARATOR
@@ -462,14 +465,14 @@ BEGIN
         POPUP "En&coding",                      65535,MFT_STRING,MFS_ENABLED
         BEGIN
             MENUITEM "ASCII",                       ID_ENCODING_ASCII,MFT_STRING,MFS_ENABLED
-            MENUITEM "UTF",                         ID_ENCODING_UTF,MFT_STRING,MFS_ENABLED
+            MENUITEM "UTF-8",                       ID_ENCODING_UTF,MFT_STRING,MFS_ENABLED
         END
     END
     POPUP "&Help",                          65535,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
     BEGIN
         MENUITEM "&About",                      ID_HELP_ABOUT,MFT_STRING,MFS_ENABLED
-        MENUITEM "Content",                     ID_HELP_CONTENT,MFT_STRING,MFS_ENABLED
-        MENUITEM "Instructions",                ID_HELP_INSTRUCTIONS,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Content",                    ID_HELP_CONTENT,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Instructions",               ID_HELP_INSTRUCTIONS,MFT_STRING,MFS_ENABLED
     END
 END
 
