finishing version 1.0 of mmixvd
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@481 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -433,8 +433,11 @@ BEGIN
         MENUITEM MFT_SEPARATOR
         MENUITEM "Zoom &In\tCtrl++",            ID_VIEW_ZOOMIN,MFT_STRING,MFS_ENABLED
         MENUITEM "Zoom &Out\tCtrl+-",           ID_VIEW_ZOOMOUT,MFT_STRING,MFS_ENABLED
+        MENUITEM MFT_SEPARATOR
         MENUITEM "Syntax &Highlighting",        ID_VIEW_SYNTAX,MFT_STRING,MFS_ENABLED
         MENUITEM "Show &White Space",           ID_VIEW_WHITESPACE,MFT_STRING,MFS_ENABLED
+        MENUITEM "Show &Line Numbers",          ID_VIEW_LINENUMBERS,MFT_STRING,MFS_ENABLED
+        MENUITEM "Show &Profile",               ID_VIEW_PROFILE,MFT_STRING,MFS_ENABLED
     END
     POPUP "&MMIX",                          65535,MFT_STRING,MFS_ENABLED
     BEGIN
