before merging with vmb
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@488 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -44,7 +44,7 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_ICON                ICON                    "Icons\\mmixvd256.ico"
+IDI_ICON                ICON                    "Icons\\mmixvd.ico"
 IDI_ICON_SMALL          ICON                    "Icons\\mmixvd16.ico"
 IDI_FILE_NEW            ICON                    "Icons\\new.ico"
 IDI_VIEW_ZOOMOUT        ICON                    "Icons\\zoomout.ico"
