--- a/vmb/src/util/vmbwin.vcproj
+++ b/vmb/src/util/vmbwin.vcproj
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
-	Name="vmbwin"
+	Version="8.00"
+	Name="vmblib"
 	ProjectGUID="{C7A37974-103B-4A8A-ACD4-F304C0D9C35C}"
 	RootNamespace="vmbwin"
 	Keyword="Win32Proj"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				WholeProgramOptimization="false"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -162,6 +162,10 @@
 			</File>
 			<File
 				RelativePath=".\connect.c"
+				>
+			</File>
+			<File
+				RelativePath=".\endian.c"
 				>
 			</File>
 			<File
@@ -220,6 +224,10 @@
 			</File>
 			<File
 				RelativePath=".\cache.h"
+				>
+			</File>
+			<File
+				RelativePath=".\endian.h"
 				>
 			</File>
 			<File
