commit before wolfgang
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@491 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmixide.rc
+++ b/vmb/src/mmixide/mmixide.rc
@@ -191,9 +191,11 @@ BEGIN
     LTEXT           "Buffer size",IDC_STATIC,7,9,50,8
     EDITTEXT        IDC_BUFFERSIZE,63,7,56,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_SPIN_BUFFERSIZE,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,63,7,11,14
-    CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,25,112,10
-    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,41,112,10
-    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,56,112,10
+    CONTROL         "Expanded address calculations",IDC_CHECK_X,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,23,112,10
+    CONTROL         "Create listing file",IDC_CHECK_LISTING,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,39,112,10
+    CONTROL         "Auto assemble",IDC_CHECK_AUTOASSEMBLE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,55,112,10
+    CONTROL         "Auto close error list",IDC_CHECK_AUTOCLOSE_ERRORS,
+                    "Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,7,71,112,10
 END
 
 IDD_OPTIONS_EDITOR DIALOGEX 0, 0, 186, 90
