converting win32_error2 to win32_ferror
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@499 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmoimg.vcproj
+++ b/vmb/src/mmixide/mmoimg.vcproj
@@ -24,8 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description=""
-				CommandLine=""
+				CommandLine="copy $(InputDir)mmixlib\mmixware\boilerplate.w $(InputDir)boilerplate.w"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -90,7 +89,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="copy boilerplate.w include file"
-				CommandLine="@echo on&#x0D;&#x0A;copy mmixware\boilerplate.w ."
+				CommandLine="copy $(InputDir)mmixlib\mmixware\boilerplate.w $(InputDir)boilerplate.w"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
