--- a/vmb/src/mmix/mmixal.vcproj
+++ b/vmb/src/mmix/mmixal.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="mmixal"
 	ProjectGUID="{B0BD2341-516A-4FC7-B239-0BC4996426C9}"
 	RootNamespace="mmixal"
@@ -20,11 +20,12 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="1"
+			CharacterSet="0"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine=""
+				Description="Build C files"
+				CommandLine="copy mmixware\boilerplate.w boilerplate.w&#x0D;&#x0A;ctangle mmixware\mmixal.w mmixal-win.ch mmixal.c&#x0D;&#x0A;ctangle mmixware\mmix-arith.w arith-win.ch mmix-arith.c"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -40,11 +41,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				UseUnicodeResponseFiles="false"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -71,7 +73,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="vmb.manifest"
+				UseUnicodeResponseFiles="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -97,13 +99,15 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="1"
+			UseOfATL="0"
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="0"
 			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description=""
-				CommandLine=""
+				Description="Build C files"
+				CommandLine="copy mmixware\boilerplate.w boilerplate.w&#x0D;&#x0A;ctangle mmixware\mmixal.w mmixal-win.ch mmixal.c&#x0D;&#x0A;ctangle mmixware\mmix-arith.w arith-win.ch mmix-arith.c"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -119,8 +123,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
-				RuntimeLibrary="2"
+				UseUnicodeResponseFiles="false"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -149,7 +154,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="vmb.manifest"
+				UseUnicodeResponseFiles="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -180,34 +185,12 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\mmix-arith.c"
+				RelativePath=".\arith-win.ch"
 				>
 			</File>
 			<File
-				RelativePath=".\mmix-arith.w"
+				RelativePath=".\mmix-arith.c"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						CommandLine="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						AdditionalDependencies="mmix-arith.w;arith-win.ch"
-						Outputs="mmix-arith.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						CommandLine="ctangle mmix-arith arith-win.ch mmix-arith.c"
-						AdditionalDependencies="mmix-arith.w;arith-win.ch"
-						Outputs="mmix-arith.c"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\mmixal-win.ch"
@@ -217,38 +200,16 @@
 				RelativePath=".\mmixal.c"
 				>
 			</File>
-			<File
-				RelativePath=".\mmixal.w"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmixal.w mmixal-win.ch mmixal.c"
-						CommandLine="ctangle mmixal.w mmixal-win.ch mmixal.c"
-						AdditionalDependencies="mmixal.w;mmixal-win.ch"
-						Outputs="mmixal.c"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCustomBuildTool"
-						Description="ctangle mmixal.w mmixal-win.ch mmixal.c"
-						CommandLine="ctangle mmixal.w mmixal-win.ch mmixal.c"
-						AdditionalDependencies="mmixal.w;mmixal-win.ch"
-						Outputs="mmixal.c"
-					/>
-				</FileConfiguration>
-			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\abstime.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
