--- a/vmb/src/vmbmmixlib/vmbmmixlib.vcproj
+++ b/vmb/src/vmbmmixlib/vmbmmixlib.vcproj
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -186,6 +186,10 @@
 			</File>
 			<File
 				RelativePath=".\buffers.h"
+				>
+			</File>
+			<File
+				RelativePath=".\gdb.h"
 				>
 			</File>
 			<File
