--- a/vmb/src/mmixide/scintilla/scintilla.vcproj
+++ b/vmb/src/mmixide/scintilla/scintilla.vcproj
@@ -50,6 +50,7 @@
 				WarningLevel="1"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="4"
+				DisableSpecificWarnings="4996;4312"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -112,6 +113,7 @@
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
+				DisableSpecificWarnings="4996;4312"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
