moving gdb specific files from vmbmmixlib, first version to compile
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@507 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixgdb/mmixgdb.vcproj
+++ b/vmb/src/mmixgdb/mmixgdb.vcproj
@@ -191,7 +191,19 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\buffers.c"
+				>
+			</File>
+			<File
+				RelativePath=".\gdb.c"
+				>
+			</File>
+			<File
 				RelativePath=".\mmixgdb.c"
+				>
+			</File>
+			<File
+				RelativePath=".\remote-utils.c"
 				>
 			</File>
 		</Filter>
@@ -200,6 +212,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\buffers.h"
+				>
+			</File>
+			<File
+				RelativePath=".\gdb.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
