--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -164,6 +164,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\windebug.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winmain.c"
 				>
 			</File>
