--- a/vmb/src/led/led.vcproj
+++ b/vmb/src/led/led.vcproj
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -124,7 +124,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -184,7 +184,7 @@
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{5A384688-86B5-439D-B700-C52330851681}"
-			RelativePathToProject="..\opt\vmbwinopt.vcproj"
+			RelativePathToProject="..\winopt\winopt.vcproj"
 		/>
 	</References>
 	<Files>
