--- a/vmb/src/mmix/mmoimg.vcproj
+++ b/vmb/src/mmix/mmoimg.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="mmoimg"
 	ProjectGUID="{1ED92422-F16F-419A-BC94-6EC9628DEA0C}"
 	RootNamespace="mmoimg"
@@ -45,7 +45,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -190,7 +190,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="ctangle mmotype mmoimg.ch mmoimg.c"
+						CommandLine="ctangle mmotype mmoimg.ch mmoimg.c&#x0D;&#x0A;"
 						Outputs="mmoimg.c"
 					/>
 				</FileConfiguration>
