--- a/vmb/src/sevensegment/sevensegment.vcproj
+++ b/vmb/src/sevensegment/sevensegment.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="8.00"
 	Name="sevensegment"
 	ProjectGUID="{1961A4CD-9F87-4E25-80C7-6109EB901107}"
 	RootNamespace="sevensegment"
@@ -44,7 +44,7 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -120,7 +120,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\util;..\winopt;..\opt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -179,7 +179,7 @@
 		/>
 		<ProjectReference
 			ReferencedProjectIdentifier="{5A384688-86B5-439D-B700-C52330851681}"
-			RelativePathToProject="..\opt\vmbwinopt.vcproj"
+			RelativePathToProject="..\winopt\winopt.vcproj"
 		/>
 	</References>
 	<Files>
