changing MMIX_LOAD_FILE_LOC
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@518 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/mmoimg.vcproj
+++ b/vmb/src/mmixide/mmoimg.vcproj
@@ -183,6 +183,7 @@
 						Name="VCCustomBuildTool"
 						Description="ctangle mmotype with mmoimg"
 						CommandLine="ctangle mmixlib\mmixware\mmotype.w mmoimg.ch mmoimg.c&#x0D;&#x0A;"
+						AdditionalDependencies="mmoimg.ch"
 						Outputs="mmoimg.c"
 					/>
 				</FileConfiguration>
@@ -193,6 +194,7 @@
 						Name="VCCustomBuildTool"
 						Description="ctangle mmotype with mmoimg"
 						CommandLine="ctangle mmixlib\mmixware\mmotype.w mmoimg.ch mmoimg.c&#x0D;&#x0A;"
+						AdditionalDependencies="mmoimg.ch"
 						Outputs="mmoimg.c"
 					/>
 				</FileConfiguration>
