adding the win32debug.rc resource to all devices, adding init_layout
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@527 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/button/button.vcproj
+++ b/vmb/src/button/button.vcproj
@@ -240,6 +240,10 @@
 				RelativePath="..\winopt\win32connect.rc"
 				>
 			</File>
+			<File
+				RelativePath="..\winopt\win32debug.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
