--- a/vmb/src/keyboard/keyboard.vcproj
+++ b/vmb/src/keyboard/keyboard.vcproj
@@ -253,6 +253,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\winopt\win32debug.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\winopt\win32dedit.rc"
 				>
 			</File>
