--- a/vmb/src/led/led.vcproj
+++ b/vmb/src/led/led.vcproj
@@ -262,6 +262,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\winopt\win32debug.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\winopt\win32dedit.rc"
 				>
 			</File>
