--- a/vmb/src/serial/serial.vcproj
+++ b/vmb/src/serial/serial.vcproj
@@ -257,6 +257,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\winopt\win32debug.rc"
+				>
+			</File>
+			<File
 				RelativePath="..\winopt\win32dedit.rc"
 				>
 			</File>
