renaming endian to intchar
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@538 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/Makefile
+++ b/vmb/src/opt/Makefile
@@ -5,7 +5,8 @@ AR = ar
 ARFLAGS = cru
 RANLIB = ranlib
 
-VMBOPTOBJECTS = param.o option.o version.o optiontab.o
+#VMBOPTOBJECTS = param.o option.o version.o optiontab.o
+VMBOPTOBJECTS = param.o  optiontab.o
 
 .PHONY:  clean
      
