Changes to get ram again running under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@539 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/Makefile
+++ b/vmb/src/opt/Makefile
@@ -6,7 +6,7 @@ ARFLAGS = cru
 RANLIB = ranlib
 
 #VMBOPTOBJECTS = param.o option.o version.o optiontab.o
-VMBOPTOBJECTS = param.o  optiontab.o
+VMBOPTOBJECTS = param.o  option.o optiontab.o
 
 .PHONY:  clean
      
