Moving param, option, and optiontab to util getting rom to compile
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@541 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/ram/Makefile
+++ b/vmb/src/ram/Makefile
@@ -1,11 +1,10 @@
 PROG= ram
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
 #CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS=  -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -13,8 +12,6 @@ all: $(PROG)
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
-
 
 $(PROG): $(PROG).c  main.c utilities
 	$(CC) $(CFLAGS) $(PROG).c main.c $(LDFLAGS) -o $(PROG)
