--- a/vmb/src/util/Makefile
+++ b/vmb/src/util/Makefile
@@ -6,9 +6,12 @@ AR = ar
 ARFLAGS = cru
 RANLIB = ranlib
 
-VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o vmbdisconnected.o vmbterminate.o vmberror.o
+VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o \
+		vmbinterrupt.o vmbgetpayload.o vmbputpayload.o \
+		vmbunknown.o vmbdisconnected.o vmbterminate.o vmberror.o
 
-VMBOBJECTS = cache.o vmb.o vmbtimewait.o message.o connect.o msgerror.o bus-arith.o error.o intchar.o $(VMBDEFAULTS)
+VMBOBJECTS = cache.o vmb.o vmbtimewait.o message.o connect.o msgerror.o \
+	     bus-arith.o error.o intchar.o optiontab.o option.o param.o $(VMBDEFAULTS)
 
 .PHONY:  clean
      
