fixing button under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@543 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/button/Makefile
+++ b/vmb/src/button/Makefile
@@ -1,11 +1,10 @@
 PROG= button
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) 
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -13,14 +12,14 @@ all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
+
 
 
 $(PROG): $(PROG).c  utilities
 	$(CC) $(CFLAGS) $(PROG).c optiontab.c $(LDFLAGS) -o $(PROG)
 
 
-TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h 
 	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
 
 
