fixing disk under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@544 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/disk/Makefile
+++ b/vmb/src/disk/Makefile
@@ -1,24 +1,22 @@
 PROG= disk
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread 
+CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread 
 CC = gcc
 
 all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
 
 
 $(PROG): $(PROG).c  utilities
 	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
 
 
-TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
 	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
 
 install: $(PROG)
