--- a/vmb/src/led/Makefile
+++ b/vmb/src/led/Makefile
@@ -1,12 +1,11 @@
 PROG= led
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
 
-#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) 
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -14,14 +13,14 @@ all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
+
 
 
 $(PROG): $(PROG).c  main.c utilities
 	$(CC) $(CFLAGS) $(PROG).c main.c optiontab.c $(LDFLAGS) -o $(PROG)
 
 
-TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h 
 	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
 
 
