fixing mother under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@548 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mother/Makefile
+++ b/vmb/src/mother/Makefile
@@ -1,11 +1,10 @@
 PROG= mother
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) 
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -13,7 +12,6 @@ all: $(PROG)
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
 
 
 $(PROG): $(PROG).c optiontab.c utilities
@@ -24,7 +22,7 @@ install: all
 
 
 TAGS:
-	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h 
 
 clean:
 	rm -f $(PROG) *.o *~
