--- a/vmb/src/screen/Makefile
+++ b/vmb/src/screen/Makefile
@@ -1,11 +1,10 @@
 PROG= screen
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
 
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -13,7 +12,6 @@ all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
-	$(MAKE) -C  $(OPTDIR)
 
 
 $(PROG): $(PROG).c  utilities
