fixing serial under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@550 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/serial/Makefile
+++ b/vmb/src/serial/Makefile
@@ -1,28 +1,23 @@
 
 
-PROGS = talk serial utilities options
+PROGS = talk serial utilities
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-CFLAGS= -ggdb  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+CFLAGS= -ggdb  -D_REENTRANT -Wall  -I$(UTILDIR) 
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC=gcc
 
 all: $(PROGS)
 
-serial: serial.o optiontab.o utilities options
+serial: serial.o optiontab.o utilities 
 	$(CC) $(CFLAGS)  serial.o optiontab.o  $(LDFLAGS) -o $@
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
 
-options:
-	$(MAKE) -C  $(OPTDIR)
-
 install: serial
 	install serial $(INSTALLDIR)
-
 
 clean:
 	rm -f *.o *~ $(PROGS)
