fixing timer under Linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@551 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/timer/Makefile
+++ b/vmb/src/timer/Makefile
@@ -1,10 +1,9 @@
 PROG= timer
 UTILDIR = ../util
-OPTDIR = ../opt
 INSTALLDIR=../bin
 
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
-LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
+CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR)
+LDFLAGS= -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
