fixing vmb for linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@558 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -1,11 +1,12 @@
 
 CFLAGS= -g -Wall
 
-SUBDIRS  = util opt device mother\
-           mmix \
+SUBDIRS  = util device mother\
+           mmixcpu \
+	   mmixgdb \
            screen keyboard vram \
            ram rom flash \
-           disk hostdisk led timer button serial
+           disk hostdisk led timer button serial vram
 
 .PHONY: hardware $(SUBDIRS) clean
 
