making strtouint64 local in option.c to avoid conflict
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@560 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -6,7 +6,7 @@ SUBDIRS  = util device mother\
 	   mmixgdb \
            screen keyboard vram \
            ram rom flash \
-           disk hostdisk led timer button serial vram
+           disk hostdisk led timer button serial
 
 .PHONY: hardware $(SUBDIRS) clean
 
